# Proyecto3IIA

./: CMakeLists.txt  ConjuntoDifuso.cpp  ConjuntoDifuso.h  SistemaDifuso.cpp  Variable.cpp  Variable.h  base-de-conocimiento.txt  descripcion-variables.txt  descripcion.txt  entrada  main.cpp
include/: ConjuntoDifuso.h  SistemaDifuso.h  ValorReal.h  Variable.h  VisualizadorSistema.h
src/: ConjuntoDifuso.cpp  SistemaDifuso.cpp  ValorReal.cpp  Variable.cpp
